--- a/Cover Files/Portfolio.html
+++ b/Cover Files/Portfolio.html
@@ -17,11 +17,27 @@
     <!--Nav Bar-->
 
     <nav>
-        <ul>
-            <li><a href="#landing">Home</a></li>
-            <li><a href="#projects">Projects</a></li>
-
-        </ul>
+        <ul class="nav nav-pills">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item dropdown">
+              <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Projects</a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">PacMen</a></li>
+                <li><a class="dropdown-item" href="#">Eyes</a></li>
+                <li><a class="dropdown-item" href="#">Real Time Bus Tracker</a></li>
+                <li><hr class="dropdown-divider"></li>
+                <li><a class="dropdown-item" href="#">Separated link</a></li>
+              </ul>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Social Networks</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true"></a>
+            </li>
+          </ul>
     </nav>
 
     <!--Home Page-->
