--- a/PacMen.html
+++ b/PacMen.html
@@ -9,29 +9,38 @@
 <body>
     
     <div class = "container">
-        <div class = "row">
-            <div class="column">
-                <h1>PacMen App</h1>
-        </div>
-            <div class="column">
-                <h1>Descripción</h1>
-        </div>
-            <div class="column">
-                <h1>Repositorio de GitHub</h1>
-            </div>
-    </div>
+        <table>
+            <tr>
+                <th>
+                    <h2>PacMen App</h2>
+                </th>
+                <th>
+                    <h2>Descripción</h2>
+                </th>
+                <th>
+                    <h2>Repositorio de GitHub</h2>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    <img src="https://github.com/cesaranibaljimenez/PacMen-Exercise/blob/main/PacMan1.png?raw=true" alt="Icono de PacMen">
+                </td>
+                <td>
+                    <p>La app tiene un botón Add PacMan a través del cuál se crean la galletas en la pantalla, cuando se acciona el botón Start Game las galletas creadas se mueven con velocidades  y posiciones aleatorias (eje "X" y "Y") hacia los bordes de la pantalla, al chocar con estos las galletas cambian de dirección y se dirigen hacia el borde contrario de la pantalla para repetir el ciclo. Para un mayor detalle de como usar la app y tener acceso a sus  archivos de configuración haz click en el reposirtorio de GitHub</p>
+                </td>
+                <td>
+                    <div class="d-grid gap-2 col-6 mx-auto">
+                        <a href=https://github.com/cesaranibaljimenez/PacMen-Exercise class="btn btn-github" target="_blank">Repositorio en GitHub</a>
+                    </div>
+                </td>
+            </tr>
+        </table>
 
-        <div class = "row">
-             <div class="column">
-                <h1>PacMen App</h1>
-         </div>
-            <div class="column">
-            <h1>Descripción</h1>
-        </div>
-            <div class="column">
-            <h1>Repositorio de GitHub</h1>
-        </div>
-        
+            <div class="text-center mt-3">
+                <a href="index.html" class="btn btn-go-home">Ir a Página de Inicio</a>
+
+            </div>
+
     </div>
 
 
