Se cambia la url de la imagen de la app y se corrige la puntuación del párrafo de Descripción

--- a/Eyes.html
+++ b/Eyes.html
@@ -23,10 +23,10 @@
             </tr>
             <tr>
                 <td>
-                    <img src= "https://github.com/cesaranibaljimenez/Eye-Exercise/blob/main/Eyes.jpg" alt="Imagen Eyes">
+                    <img src="https://github.com/cesaranibaljimenez/Eye-Exercise/blob/main/Eyes.jpg?raw=true" alt="Imagen Eyes">
                 </td>
                 <td>
-                    <p>Se trata de una portada para una aplicación que contendrá ejercicios para la salud visual. Para un mayor detalle de como usar la app y tener acceso a sus  archivos de configuración haz click en el reposirtorio de GitHub</p>
+                    <p>Se trata de una portada para una aplicación que contendrá ejercicios para la salud visual. Para un mayor detalle de como usar la app y tener acceso a sus  archivos de configuración haz click en el reposirtorio de GitHub.</p>
                 </td>
                 <td>
                     <div class="d-grid gap-2 col-6 mx-auto">
