Se añade el botón Ir a Página de Inicio

--- a/PacMen.html
+++ b/PacMen.html
@@ -36,6 +36,8 @@
             </tr>
         </table>
 
+                <a href="index.html" class="btn btn-go-home">Ir a Página de Inicio</a>
+
     </div>
 
 
